Fix z-index

--- a/components/navbar/Navbar.scss
+++ b/components/navbar/Navbar.scss
@@ -11,7 +11,7 @@ $delay: 100ms;
   background-color: white;
   border-bottom: 1px solid $frame;
   position: relative;
-  z-index: 400;
+  z-index: 600;
 }
 
 .subnav {
